feat: implementa imports SASS simplificados com loadPaths
- Configura loadPaths no gulpfile.mjs para imports diretos dos helpers
- Atualiza todos os componentes para usar imports simplificados (@use 'variables')
- Remove necessidade de paths relativos complexos (../../helpers/)
- Atualiza documentação com novos padrões de import
- Cria template de componente atualizado com paths simplificados
- Melhora DX com imports mais limpos e consistentes

--- a/src/blocks/sobre-nos/our-values.sass
+++ b/src/blocks/sobre-nos/our-values.sass
@@ -1,5 +1,5 @@
-@use '../../helpers/variables' as *
-@use '../../helpers/media' as *
+@use 'variables' as *
+@use 'media' as *
 
 .fischer-2026
   &-our-values
