--- a/src/blocks/sobre-nos/segments.sass
+++ b/src/blocks/sobre-nos/segments.sass
@@ -1,6 +1,6 @@
-@use '../../helpers/variables' as *
-@use '../../helpers/media' as *
-@use '../../helpers/classes' as *
+@use 'variables' as *
+@use 'media' as *
+@use 'classes' as *
 
 @include cls(segments)
 
