--- a/src/blocks/sobre-nos.sass
+++ b/src/blocks/sobre-nos.sass
@@ -1,5 +1,5 @@
-@use '../helpers/variables' as *
-@use '../helpers/media' as *
+@use 'variables' as *
+@use 'media' as *
 
 // Importações dos componentes individuais
 @use 'sobre-nos/breadcrumb'
