refactor: migrar de SASS para SCSS e adicionar Stylelint
- Converter todos os arquivos .sass para .scss com sintaxe de chaves e ponto-vírgula
- Atualizar gulpfile.mjs para processar arquivos .scss
- Configurar Stylelint com ordenação automática de propriedades CSS
- Adicionar suporte para auto-formatação ao salvar (source.fixAll.stylelint)
- Converter todos os componentes para usar helpers BEM (cls, element, modifier)
- Remover dependências não utilizadas: node-sass, sass-convert, postcss-nested
- Atualizar documentação README.md com novas convenções SCSS e Stylelint
- Adicionar configurações Prettier e Stylelint (.prettierrc.json, .stylelintrc.json)

--- a/src/helpers/globals.scss
+++ b/src/helpers/globals.scss
@@ -3,11 +3,11 @@
 // Exemplo: @use "globals" as *
 
 // Forward todas as funcionalidades para permitir re-exportação
-@forward "variables"
-@forward "media"  
-@forward "classes"
+@forward "variables";
+@forward "media";
+@forward "classes";
 
 // Use com namespace global para acesso direto
-@use "variables" as *
-@use "media" as *
-@use "classes" as *
+@use "variables" as *;
+@use "media" as *;
+@use "classes" as *;
