--- a/src/blocks/sobre-nos/segments.njk
+++ b/src/blocks/sobre-nos/segments.njk
@@ -8,7 +8,11 @@
   <div class="{{ cls('segments', 'container') }}">
     {% for item in sobreNosData.segments.items %}
       <div class="{{ cls('segments', 'box') }}">
-        <h4 class="{{ cls('segments', 'name') }}">{{ item.name }}</h4>
+        <h4 class="{{ cls('segments', 'name') }}">
+          {{ item.name }}
+          <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17 9L9 1L1 9" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </h4>
         <div class="{{ cls('segments', 'content') }}">
           <img src="{{ item.image | magento }}" alt="{{ item.name }}"/>
           <p class="{{ cls('segments', 'text') }}">{{ item.text }}</p>
