--- a/src/helpers/variables.scss
+++ b/src/helpers/variables.scss
@@ -156,3 +156,23 @@ $radius-large: 8px;
   font-weight: 500;
   line-height: 1.3;
 }
+
+%button-cta {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+%button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 44px;
+  padding: 8px 24px;
+  box-sizing: border-box;
+  border: solid 1px var(--base-black);
+  border-radius: $radius;
+
+  @extend %button-cta;
+}
